--- a/public/index.html
+++ b/public/index.html
@@ -1,14 +1,27 @@
 <html lang="en">
     <head>
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+        <meta name="apple-mobile-web-app-capable" content="yes" />
+        <link rel="shortcut icon" type="image/icon" href="favicon.ico" />
         <title>LN2 Camera</title>
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.2/css/bulma.min.css" />
         <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" />
+        <style>
+            html,
+            body {
+                overflow-x: hidden;
+            }
+            body {
+                position: relative;
+            }
+        </style>
     </head>
     <body>
         <div class="columns is-centered">
-            <div class="column is-narrow has-text-centered">
-                <h1 class="title">The LN<sub>2</sub> Camera is currently <span id="status">offline</span>.</h1>
+            <div class="column is-narrow has-text-centered" style="margin: 0 0.5rem 0 0.5rem">
+                <h1 class="title" style="padding-top: 1rem">
+                    The LN<sub>2</sub> Camera is currently <span id="status">offline</span>.
+                </h1>
                 <div id="feed"></div>
             </div>
         </div>
